<resources>
    <string name="app_name">GPS_Traverse_Meter</string>
    <string name="action_settings">Settings</string>

    <string name="start_lat">Start Latitude</string>
    <string name="start_lon">Start Longitude</string>
    <string name="start_alt">Start Altitude</string>
    <string name="start_time">Start Time</string>

    <string name="current_lat">current Latitude</string>
    <string name="current_lon">current Longitude</string>
    <string name="current_alt">current Altitude</string>

    <string name="total_time">Total Time</string>
    <string name="distance">Distance</string>

</resources>
